tests/positive/Imports/M.juvix
module M;
  axiom MType : Type;
end;
