tests/negative/DuplicateFixity.juvix
module DuplicateFixity;


  syntax infixl 3 +;

  syntax infixl 3 +;
  axiom + : Type → Type → Type;
end;
